@@ -21,6 +21,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [SYSTEM] [MONGODB] Always refer to settings to connect to mongodb
 - [API_PARSER] [WAF_CLOUDFLARE] Fix invalid time range requested for UTC-* consoles
 - [API_PARSER] [WAF_CLOUD_PROTECTOR] Catch invalid lines + fix timestamp handling
+- [SYSTEM] [PKI] Missing SAN
 
 
 ## [2.22.2] - 2025-03-17
